# ESMA-6205

./: .gitignore  pyproject.toml
docs/chapter-01/: chapter-01.tex
docs/chapter-08/: chapter-08.tex
homeworks/: CD Description.doc  CH01PR19.csv  CH01PR20.csv  CH01PR21.csv  CH01PR28.csv  homework-01.qmd  homework-02.qmd  homework_1.qmd
homeworks/homework-01/: homework-01.tex
notebooks/: chapter-01.qmd  chapter-01a.qmd  chapter-03.qmd  chapter-05.qmd  chapter-06.qmd  chapter_02.qmd
