[project]
name = "esma-6205"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pynvim>=0.5.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]
